Fixed a bug with code component selection visibility

--- a/src/routes/Devcards/components/common/Code.scss
+++ b/src/routes/Devcards/components/common/Code.scss
@@ -1,7 +1,4 @@
 .aceNoSelect {
-  :global .ace_marker-layer .ace_selection {
-    background: transparent !important;
-  }
   :global .ace_cursor {
     color: transparent !important;
   }
